// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="big-spacer-top"
>
  <ButtonToggle
    label="test-label"
    onCheck={[MockFunction]}
    options={
      [
        {
          "label": "foo.bar.foo",
          "value": "foo",
        },
        {
          "label": "foo.bar.baz",
          "value": "baz",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly: option checked 1`] = `
<div
  className="big-spacer-top"
>
  <ButtonToggle
    label="test-label"
    onCheck={[MockFunction]}
    options={
      [
        {
          "label": "foo.bar.foo",
          "value": "foo",
        },
        {
          "label": "foo.bar.baz",
          "value": "baz",
        },
      ]
    }
    value="baz"
  />
</div>
`;

exports[`should render correctly: with title 1`] = `
<div
  className="big-spacer-top"
>
  <h4
    className="spacer-bottom"
  >
    title.key
  </h4>
  <ButtonToggle
    label="test-label"
    onCheck={[MockFunction]}
    options={
      [
        {
          "label": "foo.bar.foo",
          "value": "foo",
        },
        {
          "label": "foo.bar.baz",
          "value": "baz",
        },
      ]
    }
  />
</div>
`;
